--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@vis.gl/react-maplibre": "*",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "maplibre-gl": "^4.0.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.9",
